[gd_scene load_steps=22 format=2]

[ext_resource path="res://Textures/BtS-Background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/UIFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Textures/UI/ResourceCounter.png" type="Texture" id=3]
[ext_resource path="res://Fonts/nasalization-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Textures/UI/Button-Generic.png" type="Texture" id=5]
[ext_resource path="res://Textures/UI/Build-Icon.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UI/EarthUI.gd" type="Script" id=7]
[ext_resource path="res://Textures/UI/Pause-Icon.png" type="Texture" id=8]
[ext_resource path="res://Textures/UI/Contracts-Icon.png" type="Texture" id=9]
[ext_resource path="res://Textures/UI/Tech-Icon.png" type="Texture" id=10]
[ext_resource path="res://Textures/UI/Time-Arrow.png" type="Texture" id=11]
[ext_resource path="res://Textures/UI/Pause.png" type="Texture" id=12]
[ext_resource path="res://Themes/TimeButton.tres" type="Theme" id=13]
[ext_resource path="res://Textures/UI/Back-icon.png" type="Texture" id=14]
[ext_resource path="res://Textures/UI/Back-icon-pressed.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1920, 1080 )
modulate_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1920, 1080 )
modulate_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.188235, 0.188235, 0.188235, 0.882353 )

[node name="EarthUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="Background" type="TextureRect" parent="Background"]
margin_left = -95.0
margin_top = -31.0
margin_right = 5597.0
margin_bottom = 3172.0
rect_scale = Vector2( 0.22, 0.22 )
texture = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="TextureRect" type="TextureRect" parent="UI"]
margin_left = 219.8
margin_right = 6065.8
margin_bottom = 911.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Science" type="Label" parent="UI/TextureRect"]
margin_left = 1192.0
margin_top = 180.0
margin_right = 2152.0
margin_bottom = 660.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "12345"
align = 1
valign = 1

[node name="MoneyCounter" type="Label" parent="UI/TextureRect"]
margin_left = 2712.0
margin_top = 170.0
margin_right = 4545.74
margin_bottom = 650.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "123456789"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyUnit" type="Label" parent="UI/TextureRect"]
margin_left = 4622.0
margin_top = 170.0
margin_right = 5132.0
margin_bottom = 650.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "k"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildButton" type="Button" parent="UI"]
anchor_right = 0.012
anchor_bottom = 0.033
margin_top = 550.0
margin_right = 487.712
margin_bottom = 1030.2
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/BuildButton"]
position = Vector2( 240, 260 )
scale = Vector2( 0.454, 0.454 )
texture = ExtResource( 6 )

[node name="ContractButton" type="Button" parent="UI"]
anchor_right = 0.012
anchor_bottom = 0.033
margin_left = 50.0
margin_top = 550.0
margin_right = 537.712
margin_bottom = 1030.2
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/ContractButton"]
position = Vector2( 250, 250 )
texture = ExtResource( 9 )

[node name="TechButton" type="Button" parent="UI"]
anchor_right = 0.012
anchor_bottom = 0.033
margin_left = 100.0
margin_top = 550.0
margin_right = 587.712
margin_bottom = 1030.2
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/TechButton"]
position = Vector2( 250, 250 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )

[node name="PauseButton" type="Button" parent="UI"]
anchor_right = 0.012
anchor_bottom = 0.033
margin_left = 5.96046e-08
margin_top = 4.03897e-28
margin_right = 487.712
margin_bottom = 480.2
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/PauseButton"]
position = Vector2( 250, 240 )
scale = Vector2( 8, 10 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="UI/PauseButton"]
position = Vector2( 250, 360 )
scale = Vector2( 8, 10 )
texture = ExtResource( 8 )

[node name="Sprite3" type="Sprite" parent="UI/PauseButton"]
position = Vector2( 250, 120 )
scale = Vector2( 8, 10 )
texture = ExtResource( 8 )

[node name="x4" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 461.0
margin_top = 250.0
margin_right = 961.0
margin_bottom = 750.0
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/x4"]
position = Vector2( 90, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="UI/x4"]
position = Vector2( 250, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="UI/x4"]
position = Vector2( 410, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="x2" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 411.0
margin_top = 250.0
margin_right = 911.0
margin_bottom = 750.0
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/x2"]
position = Vector2( 190, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="UI/x2"]
position = Vector2( 360, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="x1" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 361.0
margin_top = 250.0
margin_right = 861.0
margin_bottom = 750.0
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/x1"]
position = Vector2( 250, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="Pause" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 311.0
margin_top = 250.0
margin_right = 811.0
margin_bottom = 750.0
rect_min_size = Vector2( 0.1, 0.1 )
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="UI/Pause"]
position = Vector2( 260, 250 )
scale = Vector2( 0.14551, 0.14551 )
texture = ExtResource( 12 )

[node name="Collision" type="Label" parent="UI"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1019.0
margin_top = -27.0
margin_right = 4060.0
margin_bottom = 211.0
rect_scale = Vector2( 0.2, 0.2 )
custom_colors/font_color = Color( 0.74902, 0.0980392, 0.0980392, 1 )
custom_fonts/font = ExtResource( 2 )
text = "collisionText"
align = 2

[node name="Popup" type="CanvasLayer" parent="."]
layer = 3

[node name="TutorialCanvas" type="CanvasLayer" parent="."]
layer = 10

[node name="Tutorial" type="Control" parent="TutorialCanvas"]
visible = false
margin_left = 17.0
margin_top = 66.0
margin_right = 237.0
margin_bottom = 378.0

[node name="Label" type="Label" parent="TutorialCanvas/Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Now accept a contract. The contract has a set duration, and will be faster or slower depending on the amount of modules on your station."
autowrap = true

[node name="Continue" type="TextureButton" parent="TutorialCanvas/Tutorial"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 99.0
margin_bottom = 48.0
rect_rotation = 180.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 14 )
texture_focused = ExtResource( 14 )
expand = true
stretch_mode = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="TutorialCanvas/Tutorial"]

[connection signal="pressed" from="UI/BuildButton" to="." method="_on_BuildButton_pressed"]
[connection signal="pressed" from="UI/ContractButton" to="." method="_on_ContractButton_pressed"]
[connection signal="pressed" from="UI/TechButton" to="." method="_on_TechButton_pressed"]
[connection signal="pressed" from="UI/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="UI/x4" to="." method="_on_x4_pressed"]
[connection signal="pressed" from="UI/x2" to="." method="_on_x2_pressed"]
[connection signal="pressed" from="UI/x1" to="." method="_on_x1_pressed"]
[connection signal="pressed" from="UI/Pause" to="." method="_on_Pause_pressed"]
[connection signal="visibility_changed" from="UI/Collision" to="." method="_on_CollisionLabel_visibility_changed"]
[connection signal="pressed" from="TutorialCanvas/Tutorial/Continue" to="." method="_on_Continue_pressed"]
